--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,14 @@ __pycache__/
 # C extensions
 *.so
 
+# Large data and models
+data/
+*.pkl
+*.pt
+*.h5
+*.npz
+*.joblib
+
 # Distribution / packaging
 .Python
 build/
