--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,14 @@ data/
 *.npz
 *.joblib
 
+# Large data and models
+data/
+*.pkl
+*.pt
+*.h5
+*.npz
+*.joblib
+
 # Distribution / packaging
 .Python
 build/
