--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,22 @@ numpy>=1.21.0
 scikit-learn>=1.0.0
 lightgbm>=3.3.0
 
+# Web Framework
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+python-multipart>=0.0.6
+pydantic>=2.0.0
+
+# HTTP requests (for NCBI API)
+requests>=2.31.0
+httpx>=0.25.0
+
+# Async file operations
+aiofiles>=23.2.0
+
+# CORS support
+python-dotenv>=1.0.0
+
 # Visualization (optional - for notebooks)
 matplotlib>=3.4.0
 seaborn>=0.11.0
